style: fix main spacing

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -19,7 +19,7 @@
 .main {
   display: flex;
   flex: 1;
-  padding: 5%;
+  margin: 3% 0;
 }
 
 .productsContainer {
